--- a/LwP.ipynb
+++ b/LwP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,14 +55,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\total\\AppData\\Local\\Temp\\ipykernel_18252\\2085000045.py:27: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\NISHANT\\AppData\\Local\\Temp\\ipykernel_4816\\2085000045.py:27: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  data = torch.load(path)\n"
      ]
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], dtype=int64)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "(2500, 32, 32)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "(2500, 1024)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\total\\AppData\\Local\\Temp\\ipykernel_18252\\2085000045.py:27: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\NISHANT\\AppData\\Local\\Temp\\ipykernel_4816\\2085000045.py:27: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  data = torch.load(path)\n"
      ]
     },
@@ -342,7 +342,7 @@
        "array([5, 3, 7, ..., 5, 4, 6], dtype=int64)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -383,61 +383,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_features(images):\n",
-    "    images_tensor = torch.tensor(images).permute(0, 3, 1, 2)\n",
-    "    normalize = transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225])\n",
-    "    images_tensor = normalize(images_tensor / 255.0)\n",
+    "    \"\"\"\n",
+    "    Extract features from a batch of CIFAR-10 images using a pre-trained ResNet18 model.\n",
     "\n",
+    "    Args:\n",
+    "        images (numpy.ndarray): A 4D array of shape (N, 32, 32, 3), where N is the number of images.\n",
+    "\n",
+    "    Returns:\n",
+    "        torch.Tensor: A 2D tensor of shape (N, 512) containing the extracted features.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Step 1: Convert the input images to a tensor and apply transformations\n",
+    "    transform = transforms.Compose([\n",
+    "        transforms.ToPILImage(),  # Convert to PIL Image\n",
+    "        transforms.Resize(224),   # Resize to 224x224\n",
+    "        transforms.ToTensor(),     # Convert to tensor\n",
+    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),  # Normalize\n",
+    "    ])\n",
+    "\n",
+    "    # Transform each image and create a tensor\n",
+    "    transformed_images = torch.stack([transform(images[i]) for i in range(images.shape[0])])\n",
+    "\n",
+    "    # Step 2: Load pre-trained ResNet18 model\n",
     "    model = models.resnet18(pretrained=True)\n",
-    "    model = torch.nn.Sequential(*(list(model.children())[:-1]))\n",
-    "    model.eval()\n",
+    "    model = torch.nn.Sequential(*(list(model.children())[:-1]))  # Remove the classification layer\n",
+    "    model.eval()  # Set the model to evaluation mode\n",
     "\n",
-    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "    print(device)\n",
-    "    model.to(device)\n",
-    "    images_tensor = images_tensor.to(device)\n",
-    "\n",
+    "    # Step 3: Feature extraction\n",
     "    with torch.no_grad():\n",
-    "        features = model(images_tensor)\n",
+    "        features = model(transformed_images)  # Get features\n",
+    "        features = features.view(features.size(0), -1)  # Flatten the output\n",
     "\n",
-    "    features = features.view(features.size(0), -1)\n",
-    "    features_np = features.cpu().numpy()\n",
-    "    return features_np"
+    "    return features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\total\\AppData\\Local\\Temp\\ipykernel_18252\\2085000045.py:27: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "C:\\Users\\NISHANT\\AppData\\Local\\Temp\\ipykernel_4816\\2085000045.py:27: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  data = torch.load(path)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
      ]
     }
    ],
    "source": [
     "X_train, y_train = load_data(1, \"train\", \"one\")\n",
-    "X_train = extract_features(X_train)     "
+    "X_train = extract_features(X_train)     \n",
+    "print(X_train.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train=np.array(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,23 +463,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\total\\AppData\\Local\\Temp\\ipykernel_18252\\2085000045.py:27: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  data = torch.load(path)\n"
+      "C:\\Users\\NISHANT\\AppData\\Local\\Temp\\ipykernel_4816\\2085000045.py:27: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  data = torch.load(path)\n",
+      "c:\\Users\\NISHANT\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\NISHANT\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=ResNet18_Weights.IMAGENET1K_V1`. You can also use `weights=ResNet18_Weights.DEFAULT` to get the most up-to-date weights.\n",
+      "  warnings.warn(msg)\n",
+      "C:\\Users\\NISHANT\\AppData\\Local\\Temp\\ipykernel_4816\\2450552895.py:44: UserWarning: The use of `x.T` on tensors of dimension other than 2 to reverse their shape is deprecated and it will throw an error in a future release. Consider `x.mT` to transpose batches of matrices or `x.permute(*torch.arange(x.ndim - 1, -1, -1))` to reverse the dimensions of a tensor. (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\TensorShape.cpp:3687.)\n",
+      "  return np.sqrt(np.dot(np.dot(diff, self.inv_cov_matrix), diff.T))\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cuda\n",
-      "Accuracy: 58.28%\n"
+      "Accuracy: 81.68%\n"
      ]
     }
    ],
