--- a/LwP.ipynb
+++ b/LwP.ipynb
@@ -696,7 +696,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "proj",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -710,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
