bhai mann nahi kar raha

--- a/LwP.ipynb
+++ b/LwP.ipynb
@@ -926,6 +926,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Task 1.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mann nahi kar raha - amir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
